--- a/app/src/main/res/layout/home_content.xml
+++ b/app/src/main/res/layout/home_content.xml
@@ -17,6 +17,79 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="3">
+
+                <TextView
+                    android:padding="5dp"
+                    android:layout_width="0dp"
+                    android:id="@+id/createApartment"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/bg_right_divider"
+                    android:drawablePadding="6dp"
+                    android:drawableTop="@drawable/icon_chuangjianhuxing"
+                    android:gravity="center"
+                    android:text="@string/create"
+                    android:textColor="@color/text_color_gray"
+                    android:textSize="13sp" />
+
+                <TextView
+                    android:padding="5dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/bg_right_divider"
+                    android:drawablePadding="6dp"
+                    android:drawableTop="@drawable/icon_wodexingcheng"
+                    android:gravity="center"
+                    android:text="@string/schedule"
+                    android:textColor="@color/text_color_gray"
+                    android:textSize="13sp" />
+
+                <TextView
+                    android:padding="5dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:drawablePadding="6dp"
+                    android:background="@color/white"
+                    android:drawableTop="@drawable/icon_wodebaojia"
+                    android:gravity="center"
+                    android:text="@string/create"
+                    android:textColor="@color/text_color_gray"
+                    android:textSize="13sp" />
+
+            </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:text="我的户型"
+                    android:textSize="17sp"
+                    android:textColor="@color/text_color_black"
+                    android:layout_marginLeft="15dp"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/allApartment"
+                    android:layout_width="wrap_content"
+                    android:text="查看全部户型"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:drawableRight="@drawable/icon_zhankai"
+                    android:layout_marginRight="15dp"
+                    android:layout_height="wrap_content" />
+            </RelativeLayout>
+
         </LinearLayout>
     </ScrollView>
 
